seedboxk8s/applications/tor/Deployment.onionproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onionproxy
  namespace: tor
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: onionproxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: onionproxy
    spec:
      containers:
        - name: onionproxy
          image: nginx:1.31.6
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: onionproxy-config
              subPath: nginx.conf
            - mountPath: /html/index.html
              name: onionproxy-config
              subPath: index.html
      imagePullSecrets:
        - name: registry-k8s-dockerconfigjson
      volumes:
        - name: onionproxy-config
          configMap:
            name: onionproxy-config
