seedboxk8s/applications/tor/Deployment.torprivoxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torprivoxy
  namespace: tor
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: torprivoxy
  template:
    metadata:
      labels:
        app: torprivoxy
    spec:
      containers:
        - name: torprivoxy
          image: registry.${productionClusterFqdn}/tor/torprivoxy:latest@sha256:f663ab96130930482c781699a174649acfea88a4bf7e92a2e70b56a25bc870f8
          ports:
            - name: torprivoxy
              containerPort: 8118
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/privoxy/config
              name: torprivoxy-config
              subPath: config
      imagePullSecrets:
        - name: registry-k8s-dockerconfigjson
      volumes:
        - name: torprivoxy-config
          configMap:
            name: torprivoxy-config
