seedboxk8s/applications/tor/Deployment.torproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: torproxy
  namespace: tor
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: torproxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: torproxy
    spec:
      containers:
        - name: torproxy
          image: registry.${productionClusterFqdn}/tor/torproxy:latest@sha256:e3d935a65acfd4320f78d869f2982b175668afbcdf484f5fd4b087e12c12f239
          ports:
            - name: torproxy
              containerPort: 9050
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/tor/torrc
              name: torproxy-config
              subPath: torrc
      imagePullSecrets:
        - name: registry-k8s-dockerconfigjson
      volumes:
        - name: torproxy-config
          configMap:
            name: torproxy-config
