seedboxk8s/applications/tor/Service.onionproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: onionproxy
  namespace: tor
spec:
  selector:
    app.kubernetes.io/name: onionproxy
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
