seedboxk8s/applications/tor/Service.torprivoxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: torprivoxy
  namespace: tor
spec:
  selector:
    app.kubernetes.io/name: torprivoxy
  ports:
  - protocol: TCP
    port: 8118
    targetPort: 8118
