seedboxk8s/applications/tor/Service.torproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: torproxy
  namespace: tor
spec:
  selector:
    app.kubernetes.io/name: torproxy
  ports:
  - protocol: TCP
    port: 9050
    targetPort: 9050
