seedboxk8s/applications/tor/IngressRoute.onionproxy.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: onionproxy
  namespace: tor
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`onion.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: onionproxy
          kind: Service
          port: 80
    - match: HostRegexp(`^.+\.onion\.${productionClusterFqdn}$`)
      kind: Rule
      services:
        - name: onionproxy
          kind: Service
          port: 80
  tls:
    secretName: seedbox-wildcard-backing-secret
